--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -13,7 +13,7 @@ stages:
           - task: AzurePowerShell@5
             displayName: 'Invoke Pega API'
             inputs:
-              azureSubscription: '10032001F5EBE945'
+              azureSubscription: 'https://dev.azure.com/harshavardhanbapuso/'
               ScriptType: 'InlineScript'
               Inline: |
                 $uri = https://jsonplaceholder.typicode.com/posts/1  # Example API URL from GitHub
