--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -13,7 +13,7 @@ stages:
           - task: AzurePowerShell@5
             displayName: 'Invoke Pega API'
             inputs:
-              azureSubscription: 'https://dev.azure.com/harshavardhanbapuso/'
+              azureSubscription: 'fb8bddaf-a97b-4b8e-819c-7a6d1a2685ea'
               ScriptType: 'InlineScript'
               Inline: |
                 $uri = https://jsonplaceholder.typicode.com/posts/1  # Example API URL from GitHub
